fixed image overlap

--- a/src/AboutContainer/styles.css
+++ b/src/AboutContainer/styles.css
@@ -1,6 +1,6 @@
 
 
 .about-back {
-		background-image: url("https://mdbootstrap.com/img/Photos/Others/gradient1.jpg");
+		/*background-image: url("https://mdbootstrap.com/img/Photos/Others/gradient1.jpg");*/
 
 }
